--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "firebase": "^9.1.3",
+    "lodash": "^4.17.21",
     "quasar": "^2.0.0",
-    "vuex": "^4.0.1"
+    "vuex": "^4.0.1",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@quasar/app": "^3.0.0",
+    "@types/lodash": "^4.14.176",
     "@types/node": "^12.20.21"
   },
   "browserslist": [
