--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"No test specified\" && exit 0",
-    "deploy": "quasar build -m spa && firebase deploy --only hosting:laberu"
+    "deploy": "quasar build -m pwa && firebase deploy --only hosting:laberu"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "firebase": "^9.1.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "quasar": "^2.0.0",
     "vuex": "^4.0.1",
     "vuex-persistedstate": "^4.1.0"
@@ -22,7 +23,8 @@
   "devDependencies": {
     "@quasar/app": "^3.0.0",
     "@types/lodash": "^4.14.176",
-    "@types/node": "^12.20.21"
+    "@types/node": "^12.20.21",
+    "workbox-webpack-plugin": "^6.4.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
