--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "quasar": "^2.0.0",
+    "query-string": "^7.1.1",
     "vuex": "^4.0.1",
     "vuex-persistedstate": "^4.1.0"
   },
